# jobhound-mcp

./: .gitignore  LICENSE  README-mcp.md  README-tui.md  config.example.yaml  pyproject.toml
docs/superpowers/plans/: 2026-03-11-jobhound.md  2026-03-11-tui-github-website.md
docs/superpowers/specs/: 2026-03-11-jobhound-design.md  2026-03-11-jobhound-tui-github-website-design.md
jobhound/: apply.py  config.py  daemon.py  log.py  mcp_server.py  models.py  playwright_apply.py  scorer.py  tailor.py  tracker.py
jobhound/sources/: ashby.py  base.py  greenhouse.py  hn_hiring.py  lever.py  remoteok.py  wellfound.py
tests/: test_apply.py  test_config.py  test_daemon.py  test_models.py  test_scorer.py  test_tailor.py  test_tracker.py
tests/sources/: test_ashby.py  test_sources.py
tui/: app.py
